--- a/book.tex
+++ b/book.tex
@@ -10632,7 +10632,8 @@ use to build their search index.
 \section{Exercises}
 
 \begin{ex}
-Change the socket program to prompt the user for the URL so it can read any web page.  
+Change the socket program {\tt socket1.py} to prompt the user for 
+the URL so it can read any web page.  
 Add error checking using {\tt try} and {\tt except} to handle the condition where the 
 user enters an improperly formatted or non-existant URL.  
 \end{ex}
@@ -10652,9 +10653,9 @@ show the first 3000 characters of the document contents.
 \end{ex}
 
 \begin{ex}
-Change the {\tt urllinks.py} program to extract paragraph (p) tags
-from the retrieved HTML document and simply count how many paragraphs
-are in the document and display the count of the paragraphs as the 
+Change the {\tt urllinks.py} program to extract and count 
+paragraph (p) tags from the retrieved HTML document and 
+display the count of the paragraphs as the 
 output of your program.  Test your program on several small web pages
 as well as some larger web pages.
 \end{ex}
