--- a/book.tex
+++ b/book.tex
@@ -10558,7 +10558,7 @@ python curl2.py
 %
 
 If you have a Unix or Macintosh computer, you probably have a command
-bult into your operating system that performs this operation
+built into your operating system that performs this operation
 as follows:
 \index{curl}
 
@@ -11079,7 +11079,8 @@ made of components connected across a network.
 \section{Exercises}
 
 \begin{ex}
-Change the program that retrieves twitter data to also
+Change the program that retrieves twitter data 
+({\tt twitter2.py}) to also
 print out the location for each of the friends
 indented under the name by two spaces as follows:
 
