Spellos thanks to textWrangler
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@71626 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -244,7 +244,7 @@ about data analysis from the very beginning.
 
 The first 10 chapters are similar to the \emph{Think Python} book
 but there have been some changes.  Nearly all number-oriented
-exercises have been replaced with data-oriented exerises.
+exercises have been replaced with data-oriented exercises.
 Topics are presented in the order to needed to build increasingly
 sophisticated data analysis solutions.  Some topics like {\tt try} and
 {\tt except} are pulled forward and presented as part of the chapter
@@ -255,7 +255,7 @@ appear in the book at all.
 
 In chapters 11-15, nearly all of the material is brand new, focusing
 on real-world uses and simple examples of Python for data analysis 
-including regular expressons for searching and parsing, 
+including regular expressions for searching and parsing, 
 automating tasks on your computer, retrieving data across 
 the network, scraping web pages for data, 
 using web services, parsing XML data, and creating 
@@ -988,7 +988,7 @@ there is no element with the abbreviation $Zz$.
 The second type of syntax error pertains to the structure of a
 statement; that is, the way the tokens are arranged.  The statement $3
 + + 3 @ 6$ is illegal because even though $+$ is a legal token and 
-you can have more than one plus in an exression, you cannot have one
+you can have more than one plus in an expression, you cannot have one
 right after another. 
 Similarly,
 in a chemical formula the subscript comes after the element name, not
@@ -3026,7 +3026,7 @@ We have already seen one example of a {\bf function call}:
 The name of the function is {\tt type}.  The expression in parentheses
 is called the {\bf argument} of the function.  The argument is 
 a value or variable that we are passing into the function as input 
-ot the function.  
+to the function.  
 The result, for the {\tt type} function, is the type of the argument.
 
 \index{parentheses!argument in}
@@ -6177,7 +6177,7 @@ Since {\tt find} looks for an occurrence of a string within another
 string and either returns the position of the string or -1 if the string
 was not found, we can write the following loop to show lines which
 contain the string ``@uct.ac.za'' (i.e. they come from the University 
-of Capetown in South Africa):
+of Cape Town in South Africa):
 
 \beforeverb
 \begin{verbatim}
@@ -6342,7 +6342,7 @@ way''.  We might say that the above example is
 the Pythonic way to open a file.
 
 Once you become more skilled in Python, you can engage
-in reparte' with other Python programmers to decide
+in repartee' with other Python programmers to decide
 which of two equivalent solutions to a problem is 
 ``more Pythonic''.  The goal to be ``more Pythonic'' 
 captures the notion that programming is part engineering
@@ -8039,14 +8039,14 @@ The {\tt in} operator uses different algorithms for lists and
 dictionaries.  For lists, it uses a search algorithm, as in
 Section~\ref{find}.  As the list gets longer, the search time gets
 longer in direct proportion.  For dictionaries, Python uses an
-algorithm called a {\bf hashtable} that has a remarkable property; the
+algorithm called a {\bf hash table} that has a remarkable property; the
 {\tt in} operator takes about the same amount of time no matter how
 many items there are in a dictionary.  I won't explain 
 why hash functions are so magical,
 but you can read more about it at
 \url{wikipedia.org/wiki/Hash_table}.
 
-\index{hashtable}
+\index{hash table}
 
 \begin{ex}
 \label{wordlist2}
